css/contact.css
label {
  display: block;
  margin: 0;
}

input[type="text"] {
  line-height: 1.15;
  padding-left: 1rem;
  padding-right: 1rem;
  border: 1px #3d3d3d solid;
  border-radius: 10px;
  font-size: 1.5rem;
}

input[type="text"]:focus {
  /* outline: none; */
  border: 1px #3d3d3d solid;
  background-color: none;
  -webkit-box-shadow: none;
  box-shadow: none;
}

::placeholder {
  /* Chrome, Firefox, Opera, Safari 10.1+ */
  color: rgba(0, 0, 0, 0.5);
  font-size: 1.5rem;
  /*opacity: 1;*/ /* Firefox */
}

:-ms-input-placeholder {
  /* Internet Explorer 10-11 */
  color: rgba(0, 0, 0, 0.5);
  font-size: 1.5rem;
}

::-ms-input-placeholder {
  /* Microsoft Edge */
  color: rgba(0, 0, 0, 0.5);
  font-size: 1.5rem;
}

textarea {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  /* margin: 0; */
  height: 25rem;
  padding-left: 1rem;
  padding-right: 1rem;
  /* margin-top: 1rem;
  margin-bottom: 1rem; */
  border: 1px #3d3d3d solid;
  border-radius: 10px;
  font-size: 1.5rem;
  resize: none;
}

textarea:focus {
  /* outline: none; */
  border: 1px #3d3d3d solid;
  background-color: none;
  -webkit-box-shadow: none;
  box-shadow: none;
}

label .button {
  display: block;
  width: 100%;
  /* height: 100px; */
  color: #fff;
  background-color: #ffb89a;
  text-align: center;
  font-size: 1.5rem;
  border-radius: 10px;
  padding-top: 1rem;
  padding-bottom: 1rem;
}

label .button:hover {
  -webkit-box-shadow: inset 0px 0px 0px 2px #ffb89a;
  -moz-box-shadow: inset 0px 0px 0px 2px #ffb89a;
  box-shadow: inset 0px 0px 0px 2px #ffb89a;
  color: #ffb89a;
  background-color: #fff;
  text-align: center;
  font-size: 1.5rem;
  /* border: 2px #FFB89A solid; */
  border-radius: 10px;
  padding-top: 1rem;
  padding-bottom: 1rem;
}

.socials {
  padding-left: 10rem;
}

.socials-link {
  align-items: center;
  margin-bottom: 1.5rem;
}

.socials-name {
  font-size: 1.5rem;
  text-align: left;
  padding-left: 1.5rem;
  color: #3d3d3d;
}

.socials-name:hover {
  color: #9a7f65;
}

